--- a/Pages/Cliente/Cliente.razor
+++ b/Pages/Cliente/Cliente.razor
@@ -180,8 +180,8 @@
                                 <td>@Row.Id</td>
                                 <td>@FormatCustomerId(Row.Cedula)</td>
                                 <td>@Row.Nombre @Row.Apellidos</td>
-                                <td>@FormatPhoneNumber(Row.Telefono)</td>
                                 <td>@Row.Direccion</td>
+                                <td>@FormatPhoneNumber(Row.Telefono)</td>
                                 <td>$@Row.Limitecredito.ToString("N2")</td>
                                 <td class="d-print-none">
                                     <button @onclick="()=>Seleccionar(Row.Id)"
@@ -216,22 +216,22 @@
 
     private string FormatPhoneNumber(string phoneNumber)
     {
-        // Verifica si el número telefónico tiene la longitud esperada
-        if (phoneNumber.Length == 10)
+         // Verifica si phoneNumber es null
+        if (phoneNumber != null && phoneNumber.Length == 10)
         {
             // Formatea el número telefónico
             return $"({phoneNumber.Substring(0, 3)}) {phoneNumber.Substring(3, 3)}-{phoneNumber.Substring(6)}";
         }
         else
         {
-            // Devuelve el número telefónico sin cambios si no tiene la longitud esperada
+            // Devuelve el número telefónico sin cambios si phoneNumber es null o no tiene la longitud esperada
             return phoneNumber;
         }
     }
     private string FormatCustomerId(string customerId)
     {
         // Verifica si el número telefónico tiene la longitud esperada
-        if (customerId.Length == 11)
+        if (customerId != null && customerId.Length == 11)
         {
             // Formatea el número telefónico
             return $"{customerId.Substring(0, 3)}-{customerId.Substring(3, 7)}-{customerId.Substring(10)}";
