--- a/Pages/Proveedor/Proveedor.razor
+++ b/Pages/Proveedor/Proveedor.razor
@@ -24,7 +24,7 @@
     }
 
     .titulo-proveedores {
-        background-color: rgb(0, 0, 53); /* Fondo oscuro */
+        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
         color: #ffffff; /* Texto blanco */
         text-align: center; /* Centrar texto */
         padding: 10px; /* Añadir espacio alrededor del texto */
@@ -140,7 +140,7 @@
 
             <div class="row-12 mt-2">
                 <table class="table table-hover table-striped">
-                    <thead style="background-color: rgb(0, 0, 53); color: #ffffff;">
+                    <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                         <tr>
                             <th>#</th>
                             <th>Nombre completo</th>
