--- a/Pages/About.razor
+++ b/Pages/About.razor
@@ -8,7 +8,7 @@
     }
 
     h1 {
-        background-color: rgb(0, 0, 53);
+        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);
         color: white;
         padding: 10px;
     }
@@ -55,7 +55,7 @@
     <ul>
         <li>Registro de Provedores</li>
         <li>Control de Clientes</li>
-        <li>Gestión de Gastos</li>
+        <li>Gestión de Gastos <small><b>(Proxima actualización)</b></small></li>
         <li>Facturación de Ventas</li>
     </ul>
     <h2><strong>Información de Contacto:</strong></h2>
