--- a/Pages/Facturacion/AddEditFactura.razor
+++ b/Pages/Facturacion/AddEditFactura.razor
@@ -34,7 +34,7 @@
 
     @*Disenar el espacio para los productos a facturar*@
     <div class="card p-2 d-print-none">
-        <div class="card-header card-title" style="background-color: rgb(0, 0, 53); color: #ffffff;">
+        <div class="card-header card-title" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
             <h5>¿Que desea el cliente?</h5>
         </div>
         <div class="input-group mb-3 mt-2">
@@ -90,7 +90,7 @@
     @*Disenar los elementos que se cargan a la factura*@
     <h5><b>Detalle de la factura N°:</b> @ultimoIdFactura</h5>
     <table class="table table-hover">
-        <thead style="background-color: rgb(0, 0, 53); color: #ffffff;">
+        <thead style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
             <tr>
                 <th class="col w-25">
                     Cantidad
