--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -63,7 +63,7 @@ else
         <!-- Mostrar detalles de la factura seleccionada -->
         <div>
             <table class="table table-bordered table-striped">
-                <thead class="table" style="background-color: rgb(0, 0, 53); color: #ffffff;">
+                <thead class="table" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                     <tr>
                         <th scope="col">Cantidad</th>
                         <th scope="col">Descripción</th>
@@ -137,7 +137,7 @@ else
                         }
                         else{
                             <table class="table table-hover">
-                                <thead class="table" style="background-color: rgb(0, 0, 53); color: #ffffff;">
+                                <thead class="table" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                                     <tr>
                                         <th>FacturaId</th>
                                         <th>Monto/Pagado</th>
@@ -167,7 +167,7 @@ else
         </div>
         <!-- Mostrar la lista de facturas -->
         <table class="table table-striped">
-            <thead class="table" style="background-color: rgb(0, 0, 53); color: #ffffff;">
+            <thead class="table" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); color: #ffffff;">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Cliente</th>
