--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -32,9 +32,14 @@
     .card:hover {
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
+    .titulo {
+        background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%); /* Fondo oscuro */
+        color: #ffffff; /* Texto blanco */
+        padding: 10px; /* Añadir espacio alrededor del texto */
+    }
 </style>
 
-<h3 class="mt-4">
+<h3 class="mt-4 titulo">
     <span class="oi oi-dashboard oi mr-2"></span>
     <strong>FactuSystem Dashboard</strong> 
 </h3>
