--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -15,11 +15,11 @@
     <main>
         <AuthorizeView>
                 <Authorized>
-                    <div class="top-row px-4 d-print-none">
-                        <a class="nav-link active text-link" target="_blank">
+                    <div class="top-row px-4 d-print-none" style="background-color: rgb(0, 0, 17);">
+                        <a class="nav-link active text-white" target="_blank">
                             <strong>@context.User.FindFirstValue(ClaimTypes.GivenName)</strong>
                         </a>
-                        <a href="about" class="d-print-none">
+                        <a href="about" class="d-print-none text-white">
                             <span class="oi oi-info"></span>
                             About
                         </a>
