--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 @inject AuthenticationStateProvider authStateProvider
 
 <div class=" d-flex flex-column" style="min-height: 100vh;">
-    <div class="top-row ps-3 navbar navbar-dark" style="background-color: rgb(0, 0, 53);">
+    <div class="top-row ps-3 navbar navbar-dark" style="background-image: linear-gradient(180deg, rgb(0, 29, 82) 0%, rgb(0, 0, 0) 70%);">
         <div class="container-fluid">
             <a class="navbar-brand" href="">FactuSystem</a>
             <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
